@@ -148,10 +148,27 @@ CSS_FOR_ADDED = {
     BODY_WRAPPER_CLASS: '.%s {display: inline;}' % BODY_WRAPPER_CLASS,
 }
 
+INAPPROPRIATE_ALTTEXT = {
+    "[image unavailable.]", "_", "[image not available]", " ", "illustration", "cover", "drawing",
+    "diagram", "pic", "illustration-cartoon", "image not available", "illustration", "ilustración",
+    "[this image not available]", "[imagen no disponible.]", "[image not available.]",
+    "(uncaptioned)", "[pas d’image disponible.]", "engraving", "[image unavailable]",
+    "[image unavailble.]", "image", "(unlabelled)", "glyph",
+}
+
+DECORATIVE_ALTTEXT = {
+    "decoration", "decorative line", "(decorative)", "decoration", "décoration",
+    "ilustración de adorno", "dekoration", "divider", "ornamental line", "adorno", "ornament.",
+    "page deco", "decorative image", "[decorative image unavailable.]", "decorative header",
+    "adorno fin de capítulo", "ornament",
+}
 
 RE_NOT_XML_NAMECHAR = re.compile(r'[^\w.-]')
 
-NO_ALT_TEXT = 'Empty alt text for %s. See https://github.com/gutenbergtools/ebookmaker/blob/master/docs/alt-text.md'
+SEE_A11Y_INFO = "See https://www.pgdp.net/wiki/Accessible_HTML_eBooks#Alt_text"
+NO_ALT_TEXT = 'Empty alt text for %s. '
+DECORATIVE_WARNING = 'Replacing "%s" with empty string and adding role=presentation. '
+INAPPROPRIATE_ERROR = 'Replacing inaccessible alt text "%s" with empty string. '
 
 def nfc(_str):
     return unicodedata.normalize('NFC', EntitySubstitution.substitute_xml(_str))
@@ -510,8 +527,19 @@ class Parser(HTMLParserBase):
                         break
                     parent = parent.getparent()
                 if not infigure:
-                    warning(NO_ALT_TEXT, elem.get('src'))
+                    info(NO_ALT_TEXT, elem.get('src'))
+                    info(SEE_A11Y_INFO)
+            elif alt.lower() in DECORATIVE_ALTTEXT:
+                elem.attrib['alt'] = ''
+                elem.attrib['data-role'] = 'presentation'
+                warning(DECORATIVE_WARNING, alt)
+                warning(SEE_A11Y_INFO)
+            elif alt.lower() in INAPPROPRIATE_ALTTEXT:
+                elem.attrib['alt'] = ''
+                error(INAPPROPRIATE_ERROR, alt)
+                error(SEE_A11Y_INFO)
 
+            # write img info to logs
             rel_url = make_url_relative(parsers.webify_url(filesdir()), self.attribs.url)
             src_rel_url = make_url_relative(self.attribs.url, elem.get("src"))
             info(f'[ALTTEXT]{csv_escape([rel_url, id_, alt, src_rel_url, infigure])}')
